k8s/cloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entry-point
  annotations:
    cert-manager.io/issuer: "letsencrypt-issuer"
spec:
  rules:
  - host: comment.d657f2be-fe8a-4973-ac1f-c32a9787568f.nodes.k8s.fr-par.scw.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
